# sdl2-playground-hidi

src/: CMakeLists.txt  main.cpp
src/objects/: square.cpp  square.h
src/screens/: window.cpp  window.h
